--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,12 +1,21 @@
 {
   "name": "ui",
   "version": "0.0.0",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
   "license": "MIT",
+  
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "sideEffects": false,
+  "files": [
+    "dist"
+  ],
+
   "scripts": {
     "lint": "eslint .",
-    "generate:component": "turbo gen react-component"
+    "generate:component": "turbo gen react-component",
+    "build": "tsup",
+    "dev:ui": "tsup --watch"
   },
   "devDependencies": {
     "@turbo/gen": "^1.10.12",
@@ -16,6 +25,7 @@
     "eslint-config-custom": "*",
     "react": "^18.2.0",
     "tsconfig": "*",
+    "tsup": "^7.2.0",
     "typescript": "^4.5.2"
   }
 }
