--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,28 +2,33 @@
   "name": "ui",
   "version": "0.0.0",
   "license": "MIT",
-  
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": "./dist",
+    "./styles.css": "./dist/index.css"
+  },
   "sideEffects": false,
   "files": [
     "dist"
   ],
-
   "scripts": {
     "lint": "eslint .",
     "generate:component": "turbo gen react-component",
     "build": "tsup",
-    "dev:ui": "tsup --watch"
+    "dev": "tsup --watch"
   },
   "devDependencies": {
     "@turbo/gen": "^1.10.12",
     "@types/node": "^20.5.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.16",
     "eslint-config-custom": "*",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "tailwindcss": "^3.3.3",
     "tsconfig": "*",
     "tsup": "^7.2.0",
     "typescript": "^4.5.2"
