--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "tsconfig": "*",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.3",
+    "tailwind-config": "*"
   }
 }
