--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,7 +31,8 @@
     "tailwindcss": "^3.3.3",
     "tsconfig": "*",
     "tsup": "^7.2.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "tailwind-config": "*"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
