added script to run storybook from the main directory

--- a/turbo.json
+++ b/turbo.json
@@ -2,12 +2,14 @@
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
   "pipeline": {
+    "storybook": {},
     "build": {
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
     "lint": {},
     "dev": {
+      "dependsOn": ["storybook"],
       "cache": false,
       "persistent": true
     }
